# rust-wgpu-wasm-example

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
web/: index.html  index.js  package-lock.json  package.json
